test_data/pos/ss/652620/Windows/652620.acc.rtf
#DeepConCNF_SAS: three-state solvent accessibility prediction results 
#probabilities are in the order of B (Bury, pACC: 0-10), M (Medium, pACC: 11-40) and E (Exposed, pACC: 41-100), 
#where pACC is the relative solvent accessibility value calculated by DSSP 
   1 M E   0.003 0.041 0.955 
   2 I E   0.039 0.222 0.739 
   3 S E   0.063 0.299 0.638 
   4 T E   0.012 0.182 0.805 
   5 A E   0.097 0.390 0.513 
   6 L M   0.286 0.388 0.326 
   7 K E   0.010 0.173 0.817 
   8 Q E   0.064 0.359 0.577 
   9 A B   0.520 0.267 0.213 
  10 D E   0.022 0.352 0.626 
  11 S M   0.319 0.533 0.148 
  12 I B   0.622 0.289 0.089 
  13 E E   0.025 0.347 0.628 
  14 Q M   0.039 0.514 0.446 
  15 V B   0.762 0.181 0.057 
  16 V B   0.533 0.376 0.091 
  17 Q E   0.013 0.249 0.738 
  18 I M   0.382 0.457 0.160 
  19 I B   0.603 0.318 0.079 
  20 D E   0.112 0.381 0.507 
  21 N E   0.027 0.164 0.808 
  22 G E   0.077 0.228 0.695 
  23 G E   0.138 0.205 0.657 
  24 T E   0.153 0.367 0.480 
  25 A E   0.187 0.340 0.472 
  26 Q E   0.122 0.342 0.536 
  27 H E   0.040 0.231 0.729 
  28 G M   0.231 0.503 0.266 
  29 P M   0.314 0.453 0.232 
  30 E E   0.083 0.438 0.480 
  31 E M   0.080 0.607 0.312 
  32 I B   0.759 0.216 0.025 
  33 A B   0.868 0.114 0.019 
  34 G B   0.746 0.210 0.044 
  35 Q B   0.434 0.427 0.139 
  36 Y B   0.672 0.273 0.055 
  37 A B   0.876 0.100 0.023 
  38 Y B   0.585 0.279 0.136 
  39 L M   0.418 0.483 0.100 
  40 V B   0.546 0.380 0.074 
  41 M B   0.655 0.304 0.041 
  42 L M   0.421 0.504 0.075 
  43 H E   0.044 0.378 0.578 
  44 Q M   0.121 0.671 0.209 
  45 K E   0.006 0.105 0.889 
  46 T E   0.030 0.420 0.550 
  47 V M   0.411 0.527 0.062 
  48 D E   0.017 0.278 0.705 
  49 K E   0.005 0.110 0.885 
  50 Q E   0.002 0.045 0.953 
  51 A M   0.083 0.528 0.388 
  52 V B   0.759 0.197 0.044 
  53 K E   0.007 0.254 0.738 
  54 K E   0.005 0.140 0.855 
  55 P M   0.149 0.576 0.275 
  56 L B   0.618 0.338 0.044 
  57 D E   0.007 0.187 0.805 
  58 D E   0.014 0.410 0.576 
  59 L B   0.809 0.159 0.033 
  60 M M   0.042 0.548 0.410 
  61 S E   0.004 0.063 0.933 
  62 Q E   0.007 0.171 0.823 
  63 G E   0.055 0.169 0.776 
  64 A M   0.258 0.422 0.321 
  65 M E   0.021 0.315 0.663 
  66 F M   0.430 0.478 0.093 
  67 D E   0.033 0.422 0.545 
  68 Y M   0.136 0.590 0.273 
  69 D E   0.012 0.170 0.818 
  70 L M   0.071 0.644 0.285 
  71 A B   0.785 0.156 0.059 
  72 L M   0.353 0.526 0.121 
  73 Q E   0.013 0.183 0.804 
  74 Q M   0.120 0.620 0.261 
  75 A B   0.821 0.126 0.053 
  76 E M   0.066 0.530 0.404 
  77 N E   0.026 0.291 0.684 
  78 L M   0.321 0.498 0.181 
  79 L B   0.461 0.343 0.196 
  80 L E   0.099 0.423 0.478 
  81 N E   0.010 0.144 0.845 
  82 L M   0.103 0.473 0.424 
  83 V E   0.075 0.316 0.609 
  84 E E   0.007 0.080 0.914 
  85 T E   0.005 0.058 0.938 
