test_data/neg/ss/655291/Windows/655291.acc.rtf
#DeepConCNF_SAS: three-state solvent accessibility prediction results 
#probabilities are in the order of B (Bury, pACC: 0-10), M (Medium, pACC: 11-40) and E (Exposed, pACC: 41-100), 
#where pACC is the relative solvent accessibility value calculated by DSSP 
   1 M E   0.004 0.041 0.955 
   2 K E   0.016 0.149 0.835 
   3 K E   0.017 0.226 0.757 
   4 R E   0.022 0.264 0.714 
   5 Y M   0.314 0.589 0.097 
   6 K E   0.011 0.228 0.760 
   7 V B   0.615 0.364 0.021 
   8 T M   0.079 0.514 0.407 
   9 A B   0.544 0.390 0.066 
  10 L M   0.265 0.598 0.138 
  11 F B   0.491 0.406 0.103 
  12 E E   0.016 0.238 0.746 
  13 D E   0.013 0.124 0.863 
  14 G E   0.022 0.191 0.787 
  15 T E   0.039 0.344 0.617 
  16 S M   0.127 0.460 0.413 
  17 Q M   0.067 0.527 0.406 
  18 C B   0.681 0.217 0.102 
  19 L M   0.390 0.461 0.149 
  20 V B   0.597 0.281 0.121 
  21 V M   0.336 0.434 0.230 
  22 G B   0.429 0.384 0.186 
  23 N E   0.061 0.458 0.480 
  24 F B   0.695 0.235 0.070 
  25 S E   0.062 0.331 0.607 
  26 S M   0.131 0.527 0.342 
  27 P E   0.098 0.315 0.587 
  28 T B   0.388 0.384 0.228 
  29 N E   0.144 0.423 0.432 
  30 A E   0.217 0.338 0.445 
  31 W B   0.654 0.250 0.096 
  32 C B   0.668 0.272 0.060 
  33 A E   0.143 0.349 0.508 
  34 A M   0.253 0.403 0.345 
  35 M B   0.611 0.300 0.089 
  36 R E   0.022 0.330 0.648 
  37 N E   0.004 0.106 0.890 
  38 L M   0.438 0.491 0.071 
  39 T E   0.030 0.480 0.491 
  40 P E   0.046 0.222 0.732 
  41 E E   0.004 0.104 0.892 
  42 G M   0.369 0.409 0.222 
  43 I M   0.393 0.427 0.180 
  44 A E   0.149 0.316 0.535 
  45 R E   0.014 0.344 0.641 
  46 V B   0.497 0.361 0.142 
  47 Q E   0.029 0.390 0.581 
  48 H E   0.030 0.261 0.709 
  49 Y M   0.165 0.605 0.229 
  50 N E   0.050 0.328 0.622 
  51 V M   0.185 0.445 0.370 
  52 E E   0.015 0.223 0.762 
  53 E E   0.019 0.185 0.796 
  54 I E   0.115 0.438 0.448 
  55 S E   0.007 0.095 0.898 
  56 K E   0.004 0.053 0.943 
